--- a/Portfolio/app/src/main/res/layout/activity_main.xml
+++ b/Portfolio/app/src/main/res/layout/activity_main.xml
@@ -36,8 +36,24 @@
         app:layout_constraintRight_toRightOf="parent"
         tools:background="@color/black"/>
 
+    <me.relex.circleindicator.CircleIndicator3
+        android:id="@+id/circleIndicator"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        app:layout_constraintStart_toStartOf="@+id/viewPager"
+        app:layout_constraintEnd_toEndOf="@+id/viewPager"
+        app:layout_constraintBottom_toBottomOf="@+id/viewPager"/>
 
-
+    <TextView
+        android:id="@+id/nameTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/viewPager"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="50dp"
+        android:text="Name"
+        android:textStyle="bold"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
