--- a/Portfolio/app/src/main/res/values/themes.xml
+++ b/Portfolio/app/src/main/res/values/themes.xml
@@ -13,4 +13,13 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="titleText">
+        <item name="android:textSize">15sp</item>
+    </style>
+    <style name="contentText">
+        <item name="android:textSize">25sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
 </resources>
