--- a/Portfolio/app/src/main/res/layout/activity_main.xml
+++ b/Portfolio/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="About KangSeungGu"
+            android:text="About Me"
             android:textColor="@color/white"
             android:textStyle="bold"
             android:textSize="20sp"
@@ -26,14 +26,16 @@
     </androidx.appcompat.widget.Toolbar>
 
     <androidx.viewpager2.widget.ViewPager2
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="30dp"
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         app:layout_constraintTop_toBottomOf="@+id/toolBar"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:background="@color/black"/>
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        tools:background="@color/black" />
 
     <me.relex.circleindicator.CircleIndicator3
         android:id="@+id/circleIndicator"
@@ -44,14 +46,14 @@
         app:layout_constraintBottom_toBottomOf="@+id/viewPager"/>
 
         <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@+id/viewPager"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:orientation="vertical"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="30dp"
             android:layout_marginRight="30dp"
             android:layout_marginLeft="30dp"
             android:layout_marginBottom="30dp">
@@ -60,13 +62,11 @@
                 android:layout_height="wrap_content"
                 android:theme="@style/titleText"
                 android:text="Name"/>
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="SeungGu Kang"
                 android:theme="@style/contentText"/>
-
             <TextView
                 android:layout_marginTop="20dp"
                 android:layout_width="wrap_content"
@@ -77,19 +77,23 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:theme="@style/contentText"
-                android:text="SeoulTech University Computer science dept"/>
-
+                android:text="SeoulTech University\nComputer Science dept"/>
             <TextView
                 android:layout_marginTop="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:theme="@style/titleText"
                 android:text="Career"/>
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                tools:listitem="@layout/recycler_item"/>
         </LinearLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/recycler_item"
+        android:overScrollMode="never"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
