--- a/Portfolio/app/src/main/res/values/themes.xml
+++ b/Portfolio/app/src/main/res/values/themes.xml
@@ -16,10 +16,12 @@
 
     <style name="titleText">
         <item name="android:textSize">15sp</item>
+        <item name="fontFamily">@font/nanumsquare</item>
     </style>
     <style name="contentText">
-        <item name="android:textSize">25sp</item>
+        <item name="android:textSize">20sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/black</item>
+        <item name="fontFamily">@font/nanumsquare</item>
     </style>
 </resources>
